--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "95a396b7",
+   "id": "f2224fc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "125eeb4b",
+   "id": "d8f002fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "45c77a8f",
+   "id": "1afacf23",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3a0ccf54",
+   "execution_count": 59,
+   "id": "d20f708a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,163 +42,224 @@
     "        self.eta=eta\n",
     "        self.epochs=epochs\n",
     "    \n",
+    "    def _z_outcome(self,inputs, weights):\n",
+    "        return np.dot(inputs, weights)\n",
+    "    \n",
+    "    def activation_function(self, z):\n",
+    "        return np.where(z > 0,1,0)\n",
+    "    \n",
     "    def fit(self,X,y):\n",
     "        self.X=X\n",
     "        self.y=y\n",
     "        \n",
     "        X_with_bias = np.c_[self.X, -np.ones((len(self.X), 1))]\n",
-    "        print(f\"X with bias: \\n{X_with_bias}\")"
+    "        print(f\"X with bias: \\n{X_with_bias}\")\n",
+    "        \n",
+    "        for epochs in range(self.epochs):\n",
+    "            \n",
+    "            z = self._z_outcome(X_with_bias, self.weights)\n",
+    "            y_hat = self.activation_function(z)\n",
+    "            print(f\"predicted value after forward pass \\n{y_hat}\")\n",
+    "            self.error = self.y - y_hat\n",
+    "            print(f\"updated weights after epoch: {epochs + 1}/{self.epochs}: \\n{self.weights}\")\n",
+    "            self.wights = self.weights + self.eta * np.dot(X_with_bias.T, self.error )\n",
+    "            \n",
+    "    def predict(self, X):\n",
+    "        X_with_bias = np.c_[X,-np.ones((len(X),1))]\n",
+    "        weights = self._z_outcome(X_with_bias, self.weights)\n",
+    "        return self.activation_function(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "747520f2",
+   "execution_count": 60,
+   "id": "31b3d959",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  0\n",
+       "1   0   1  1\n",
+       "2   1   0  1\n",
+       "3   1   1  1"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OR = {\n",
+    "    \"x1\":[0,0,1,1],\n",
+    "    \"x2\":[0,1,0,1],\n",
+    "    \"y\":[0,1,1,1]\n",
+    "}\n",
+    "\n",
+    "df_OR = pd.DataFrame(OR)\n",
+    "\n",
+    "df_OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0d1fc55c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obj=Perceptron(eta=0.01, epochs=10)"
+    "def prepare_data(df, target_col=\"y\"):\n",
+    "    X=df.drop(target_col,axis=1)\n",
+    "    y=df[target_col]\n",
+    "    return X,y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7ec673ee",
+   "execution_count": 62,
+   "id": "b7dfc006",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.01"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj.eta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "80c9d0d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj.epochs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ffd5f476",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.11017029e-06, 9.64203172e-05, 8.42009400e-06])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obj.weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "25c16d1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m obj\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX\u001b[49m,y)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X with bias: \n",
+      "[[ 0.  0. -1.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 1.  0. -1.]\n",
+      " [ 1.  1. -1.]]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 1/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 2/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 3/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 4/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 5/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 6/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 7/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 8/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 9/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n",
+      "predicted value after forward pass \n",
+      "[1 0 1 0]\n",
+      "updated weights after epoch: 10/10: \n",
+      "[ 2.55750849e-05 -5.28410016e-05 -2.52328237e-05]\n"
      ]
     }
    ],
    "source": [
-    "obj.fit(X,y)"
+    "X,y =prepare_data(df_OR)\n",
+    "ETA=0.1\n",
+    "EPOCHS=10\n",
+    "model_or = Perceptron(eta=ETA,  epochs=EPOCHS)\n",
+    "model_or.fit(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "b2b71ae4",
+   "execution_count": 63,
+   "id": "b54f41e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 1.],\n",
-       "       [1., 1.],\n",
-       "       [1., 1.],\n",
-       "       [1., 1.]])"
+       "array(1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=np.ones((4,2))\n",
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "c8db1b57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y=np.ones((4,1))\n",
-    "y"
+    "model_or.predict(X=[[1,1]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717a3b87",
+   "id": "471c1c52",
    "metadata": {},
    "outputs": [],
    "source": []
